# Project-ErLych

./: Makefile.am  README.md  configure.ac  ready
SQL/migrate/: README.md  pgsql.20191332005.init schema v.sql
libD3B8/: D3B8_copy.c  D3B8_free.c  D3B8_index.c  D3B8_inheritance.c  D3B8_init.c  D3B8_long.c  D3B8_main.c  D3B8_prefix.c  D3B8_purgemode.c  D3B8_short.c  D3B8_unproc.c  Makefile.am  README.md  libD3B8.h  malloc.h
libmidget/: Makefile.am  README.md  driver.cpp  sayhi.cpp  sayhi.h
