## Process this file with automake to produce Makefile.in

# As top level makefile, our only job is to recurse into subdirs
#   ...and yes we like recursion because `make -j` is sane, 
#   working cooperativly with subprocesses to ensure that the 
#   number of process we specify are not exceeded.
SUBDIRS= libmidget

